--- a/src/index.scss
+++ b/src/index.scss
@@ -33,7 +33,7 @@ section {
 
 .nav-links {
   position: absolute;
-  right: 1rem;
+  left: 1rem;
   transition: 1s;
   ul {
     margin-right: 35px;
@@ -126,28 +126,7 @@ section {
   }
 }
 
-@keyframes navlinks-animation {
-  0% {
-    right: 1rem;
-  }
-  50% {
-    right: 32rem;
-  }
-  70% {
-    right: 28rem;
-  }
-  100% {
-    right: 30rem;
-  }
-}
-@keyframes navlinks-reverse {
-  0% {
-    right: 30rem;
-  }
-  100% {
-    right: 1rem;
-  }
-}
+
 
 .download-resume {
   border: none;
@@ -174,7 +153,7 @@ section {
   position: absolute;
   top: 0;
   right: 0;
-  width: 20rem;
+  width: 1px;
   height: 100vh;
   background-color: #fff5cf;
   animation: overlay 0.6s forwards;
@@ -234,6 +213,28 @@ section {
     right: 5rem;
   }
 }
+
+@keyframes move-about{
+  0%{
+    position: relative;
+    right: 0px;
+  }
+  100%{
+    position: relative;
+    right: 20rem;
+  }
+}
+
+@keyframes close-about{
+  0%{
+    position: relative;
+    right: 20rem;
+  }
+  100%{
+    position: relative;
+    right:0px;
+  }
+}
 // navbar responsive
 @media screen and (max-width: 1024px) {
   
@@ -265,6 +266,24 @@ section {
   #burgermenu{
     display: block;
   }
+  #mypic{
+    margin-top: min(30vw, 111px) ;
+    // width: 100%    ;
+    width: 80vw;
+    max-width: 360px;
+    max-height: 360px;
+    height:80vw !important;
+  }
+  .header-typo{
+    margin-top: min(60vw,222px) !important;
+    width: 35vw;
+    h1{
+      font-size: 4rem !important;
+    }
+    p{
+      font-size: 3rem;
+    }
+  }
 }
 
 @media screen and (min-width: 1024px) {
@@ -274,5 +293,13 @@ section {
   #burgermenu{
     display: none;
   }
-
 }
+
+
+  
+  // header 
+  #mypic{
+    transition: 0.5s ;
+  }
+
+  
