--- a/src/container/work/work.scss
+++ b/src/container/work/work.scss
@@ -4,7 +4,6 @@
 .work-cards-container{
     display: flex;
     flex-wrap: wrap; 
-    padding-right: 5%;
 }
 
 .work-card{
@@ -12,9 +11,8 @@
     position: relative;
     align-items: center;
     flex-direction: column; 
-    width: 18.75%;
-    margin-left: 5%;
-   
+    width: 35%;
+    margin-left: 10%;
     margin-top: 2%;
     font-size: 1.1rem;
     font-weight: 600;
@@ -23,10 +21,11 @@
 
 .frontWorkCard{
     position: relative;
+    width: 100%;
     transform: rotateY(0deg);
     transition:1s;
     background-color:#ffd770;
-    padding: 7% 7% 5px 7%; 
+    padding: 10% 3% 5px 3%; 
     box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.534);
     box-sizing: border-box;
 
@@ -34,6 +33,23 @@
     p{
         margin-top: 4%;
     }
+
+
+}
+
+
+.work-card-btn{
+    width: fit-content;
+    background-color: #353535;
+    border-radius: 10px;
+    color:white;
+    padding: .3rem .5rem;
+    border:none;
+    text-decoration: none;
+    cursor:pointer;
+    font-size:1rem;
+
+
 
 
 }
@@ -49,7 +65,7 @@
 
 @media screen and (max-width: 768px){
     .work-card{
-        width: 26.67%;
+        // width: 26.67%;
 
     }
 }
@@ -57,7 +73,18 @@
 @media screen and (max-width: 425px){
     .work-card{
     padding: 2.5% 2.5% 5px 2.5%; 
-        width: 42.5%;
+        // width: 42.5%;
         font-size: 1.7rem;
+    }
+}
+
+.work-section{
+    margin-top: 40%;
+    @media screen and (max-width: 600px){
+        margin-top:50% ;
+    }
+    @media screen and (max-width: 482px) {
+        margin-top:70%;
+        
     }
 }
