--- a/src/container/work/work.scss
+++ b/src/container/work/work.scss
@@ -11,11 +11,19 @@
     position: relative;
     align-items: center;
     flex-direction: column; 
-    width: 35%;
-    margin-left: 10%;
     margin-top: 2%;
-    font-size: 1.1rem;
-    font-weight: 600;
+    width:80%;
+    margin-left: 10%;
+
+    @media screen and (min-width: 400px){
+        width: 45%;
+        margin-left: 5%;
+    }
+    
+    @media screen and (min-width: 768px){
+        font-size: 1.1rem;
+        font-weight: 600;
+    }
    
 }
 
