--- a/src/index.scss
+++ b/src/index.scss
@@ -26,332 +26,26 @@ section {
   height: 100vh;
 }
 
-.navbar {
-  padding: 0.5rem;
-  display: flex;
-  align-items: center;
-  position: fixed;
-  z-index: 3;
-  width: 100%;
-  top: 1.3rem;
-}
-@keyframes navbar-on-scroll-zero {
-  0%{
-    top: -5rem;
- }
-  100%{
-    top: 0.1rem;
-  }
-}
 
-.nav-links {
-  position: absolute;
-  left: 1rem;
-  display: flex;  
-  z-index: 2;
-  background:rgba(0, 0, 0, 0.56);
-  // transition: 0.5s;
-
-  // a class to set color to navbar anchor elements
-
-  
-  ul {
-    transition: 1s;
-    display: flex;
-  align-items: center;
-   padding: 0 1.5rem 0 1.5rem ;
-  
-
-    li {
-      display: inline-block;
-      font-family: Inter;
-      text-transform: uppercase;
-      a {
-        text-decoration: none;
-        color: #fff;
-      }
-    }
-  }
-}
-
-.coded-navlink,
-.nav-links li:hover {
-  position: relative;
-  a {
-    text-decoration: line-through !important;
-  }
-}
-.coded-navlink:before,
-.nav-links li:hover::before {
-  content: "<";
-  left: -15px;
-  position: absolute;
-  color: white;
-}
-.coded-navlink::after,
-.nav-links li:hover::after {
-  content: "/>";
-  margin-left: 5px;
-  position: absolute;
-  color: white;
-
-}
-
-.nav-links a:focus {
-  color: var(--gray-color) !important;
-}
-
-.logo-container {
-  display: flex;
-  align-items: center;
-  position: relative;
-}
-
-.c {
-  position: absolute;
-  left: 150px;
-  top: 1px;
-
-  img {
-    width: 37px;
-    height: 38px;
-  }
-}
-
-.a img {
-  width: 27px;
-  height: 38px;
-}
-.b {
-  font-size: 18px;
-  font-family: FredokaOne;
-  position: relative;
-  bottom: 2px;
-}
-
-@keyframes logo {
-  0% {
-    left: 10rem;
-  }
-  70% {
-    left: 0px;
-  }
-  100% {
-    left: 1.7rem;
-  }
-}
-
-@keyframes logo-reverse {
-  0% {
-    left: 20px;
-  }
-
-  100% {
-    left: 150px;
-  }
-}
-
-.download-resume {
-  border: none;
-  border-radius: 4px;
-  width: 100px;
-  height: 30px;
-  display: none;
-  position: absolute;
-  right: 45px;
-  align-items: center;
-  justify-content: space-around;
-  font-family: Inter;
-  font-size: 16px;
-  text-transform: uppercase;
-  padding: 5px;
-  text-decoration: none;
-  color: var(--primary-color);
-  background-color: #e9e9e9;
-  cursor: pointer;
-  &:hover {
-    color: var(--gray-color);
-    background-color: var(--primary-color);
-  }
-}
-
-.overlay {
-  position: absolute;
-  top: 0px;
-  right: 0rem !important;
-  height: 100vh;
-  background-color: #fff5cf;
-  animation: overlay 0.6s forwards;
-  box-shadow: -1px 0px 0px 0px #a8ac8f;
-  z-index: 2;
-  
-  
-  li{
-    text-transform: uppercase;     
-    font-family: Inter;
-    margin-top: 4rem;
-    font-size: 1.5rem; 
-    list-style-type:none;
-    a{
-      text-decoration: none;
-      color: var(--primary-color);
-    }
-  }
-
-}
-
-@keyframes overlay {
-  0% {
-    width: 0px;
-  }
-  100% {
-    width: 20rem;
-
+#home{
+  padding-top: 10rem;
+  height: fit-content;
+  background-color: #ffd770;
+    .mobile-pic{
+      width: 50%;
+    }  
+    @media screen and (min-width: 1024px) {
+        background-image: url(./assets/header-img.png);
+        background-size: cover;
+        position: relative;
+        height: 100vh;
+        .mobile-pic{
+          display: none;
+        }
+        }
     
   }
-}
 
-@keyframes close-overlay {
-  0% {
-    width: 20rem;
-  }
-  100% {
-    width: 0px;
-  }
-}
-
-.burgermenu{
-  transition: 0.5s;
-}
-
-@keyframes burgermenu-animation{
-  0%{
-    right: 5rem;
-  }
-  100%{
-    right: 21rem;
-  }
-}
-
-@keyframes burgermenu-close-animation {
-  0%{
-    right: 21rem;
-  }
-  100%{
-    right: 5rem;
-  }
-}
-
-@keyframes sidebar-open{
-  0%{
-    position: relative;
-    right: 0px;
-  }
-  100%{
-    position: relative;
-    right:20rem;
-  }
-}
-
-@keyframes sidebar-close{
-  0%{
-    position: relative;
-    right: 20rem;
-  }
-  100%{
-    position: relative;
-    right:0px;
-  }
-}
-// navbar responsive
-@media screen and (max-width: 1024px) {
-  #home{
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: rgb(255, 255, 255);
-    display: flex;
-    align-items: center;
-  }
-  
-  .c {  
-    position: unset;
-    img {
-      width: 3rem;
-      max-width: 37px;
-      height: 3rem;
-      max-height: 38px;
-    }
-  }
-  
-  .a img {
-    width: 2.5rem;
-    max-width: 27px;
-    height: 3rem;
-    max-height: 38px;
-  }
-  .b {
-    font-size: min(2rem, 18px);
-    bottom: 2px;
-  }
-
-
-  .nav-links {
-    display: none;
-  }
-  #burgermenu{
-    display: block;
-  }
-  #mypic{
-    margin-top: min(30vw, 111px) ;
-    width: 80vw;
-    max-width: 360px;
-    max-height: 360px;
-    height:80vw !important;
-    z-index: -1;
-  }
-  
-
-  .navbar{
-    top: 0;
-  }
-
-  
-}
-
-
-
-@media screen and (min-width: 1024px) {
-  #home{
-    background-image: url(./assets/header-img.png) !important ;
-    background-size: cover;
-    position: relative;
-  
-  }
-  .nav-links {
-    display: flex;
-  }
-  #burgermenu{
-    display: none;
-  }
-
-  .header-typo{
-    background-color: rgba(255, 255, 255, 0.51);
-    position: absolute;
-    padding: 1rem 0;
-    top: 30%;
-    right: 0;
-    z-index: 1;
-    width: 40%;
-    height: 30%;
-    box-sizing: content-box;
-  }
- 
-
-    
-
-
-}
 
 
   
