--- a/src/index.scss
+++ b/src/index.scss
@@ -30,7 +30,7 @@ section {
 #home{
   padding-top: 10rem;
   height: fit-content;
-  background-color: #ffd770;
+  background-color: #bbe4f0;
     .mobile-pic{
       width: 50%;
     }  
