--- a/src/container/header/header.scss
+++ b/src/container/header/header.scss
@@ -16,6 +16,10 @@
   }
 
   .header{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
     h1{
       @media screen and (min-width: 1024px){
         display: none;
