--- a/src/container/skills/skills.scss
+++ b/src/container/skills/skills.scss
@@ -9,7 +9,7 @@
     }
     h4{
         margin-top: 1rem;
-        color: #222725;
+        color: #99D2E3;
     }
     p{
         margin-top: 1rem;
