--- a/src/container/about/about.scss
+++ b/src/container/about/about.scss
@@ -1,12 +1,17 @@
 .contact-button{
     position: relative;
     z-index: 2;
+    height:5rem;
+    font-size: 1rem;
+    width: 5rem;
+    font-weight: 600;
+
 }
 
 .contact-button-2{
     content: '';
     width: 100%;
-    height: 2.3rem;
+    height: 3.3rem;
     background-color:#37b7b3;
     position: absolute;
     top:0rem;
@@ -20,17 +25,33 @@
     left:0;
 }
 
+.about-text{
+    @media screen and (max-width:600px){
+        
+    }
+    // margin-bottom: 5rem;
+}
+
 @media screen and (max-width:600px){
     #about{
-        height: fit-content;
+        height: 100vh;
         flex-direction: column;
         div:nth-child(1){
-            width:80% !important;
+            width:90% !important;
             order:2;
+            margin-bottom: 10rem;
+            h1{
+                font-size: 2rem;
+                margin-bottom: 2rem;
+            }
+            p{
+                font-size: 1.4rem;
+            }
         }
     
     img:nth-child(2){
-        width:80% !important;
+        width:90% !important;
         order: 1;
-    }}
+    }
+}
 }
