--- a/src/container/header/header.scss
+++ b/src/container/header/header.scss
@@ -8,9 +8,9 @@
             position: absolute;
             top: 30%;
             right: 0;
-            padding: 2rem 0;
+            // padding: 2rem 0;
             width: 40%;
-            height: 30%;
+            height: 25%;
     }
   
   }
