--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -25,17 +25,14 @@
   left: 1rem;
   display: flex;  
   z-index: 2;
-  background:rgba(0, 0, 0, 0.56);
-  // transition: 0.5s;
-
-  // a class to set color to navbar anchor elements
+  background:rgba(0, 0, 0);
 
   
   ul {
     transition: 1s;
     display: flex;
-  align-items: center;
-   padding: 0 1.5rem 0 1.5rem ;
+    align-items: center;
+    padding: 0 1.5rem 0 1.5rem ;
   
 
     li {
