--- a/src/container/about/about.scss
+++ b/src/container/about/about.scss
@@ -12,7 +12,7 @@
     content: '';
     width: 100%;
     height: 3.3rem;
-    background-color:#37b7b3;
+    background-color:#FB8D2E;
     position: absolute;
     top:0rem;
     left:0.5rem;
