--- a/src/container/Testimonials/Testimonials.scss
+++ b/src/container/Testimonials/Testimonials.scss
@@ -1,14 +1,3 @@
-.testimonials-div{
-    font-family: 'Inter';
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    background-color: #e5e5e5;
-    padding-top: 4rem;
-}
-
 .carousel-container{
     height: 80vh;
     overflow-x: hidden;
@@ -28,7 +17,7 @@
         width: max(14vw,100px);
         height: max(14vw,100px);
         border-radius: 50%;
-        border: #F66D00 5px solid;
+        border: 1px #000 solid;
     }
     p{
         font-size: 1.6rem !important;
@@ -45,20 +34,29 @@
 }
 
 .rec.rec-arrow {
-    color: #F66D00;
-
-    &:hover{
-        
+    color: #fff;
+    font-size: 5rem;
+    padding: 0 !important;
+    background-color: #000;
+    border: 1px solid #000;
+    margin: 0 1rem;
+    @media (min-width:768px){
+        font-size: 3rem;
+    }
+    @media (min-width:2000px){
+        font-size: 3rem;
+        width: 150px;
+        height: 120px;
     }
 }
 
 .rec.rec-arrow:hover{
-    background-color: #F66D00 !important;
-    border: 1px solid #F66D00;
-    color: white;
+    background-color: #fff !important;
+    border: 1px solid #000;
+    color: #000 !important;
 }
 .rec.rec-arrow:focus{
-    background-color: #F66D00 !important;
-    border: 1px solid #F66D00;
-    color: white;
+    background-color: #fff !important;
+    border: 1px solid #000;
+    color: #000 !important;
 }
